--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
+astroid==2.11.7
 colorama==0.4.6
 cycler==0.11.0
+dill==0.3.7
 exceptiongroup==1.2.0
 fonttools==4.38.0
 importlib-metadata==6.7.0
 iniconfig==2.0.0
+isort==5.11.5
 kiwisolver==1.4.5
+lazy-object-proxy==1.9.0
 matplotlib==3.5.3
+mccabe==0.7.0
 numpy==1.21.6
 packaging==23.2
 Pillow==9.5.0
+platformdirs==4.0.0
 pluggy==1.2.0
+pylint==2.13.9
 pyparsing==3.1.1
 pytest==7.4.3
 python-dateutil==2.8.2
 six==1.16.0
 tomli==2.0.1
+typed-ast==1.5.5
 typing_extensions==4.7.1
+wrapt==1.16.0
 zipp==3.15.0
