--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 astroid==2.11.7
 colorama==0.4.6
+coverage==7.2.7
 cycler==0.11.0
 dill==0.3.7
 exceptiongroup==1.2.0
@@ -19,6 +20,7 @@ pluggy==1.2.0
 pylint==2.13.9
 pyparsing==3.1.1
 pytest==7.4.3
+pytest-cov==4.1.0
 python-dateutil==2.8.2
 six==1.16.0
 tomli==2.0.1
