--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          python3 -m pip --upgrade pip
+          python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
 
       - name: Test with PyTest
